[tool.poetry]
name = "PdfToVideoConverter"
version = "0.1.0"
description = ""
authors = ["moses"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
pymupdf = "^1.24.2"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
